--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,52 @@
     transform: rotate(360deg);
   }
 }
+
+.landing-image{
+  width: auto;
+  max-width: 15%;
+  height: auto;
+  max-height:15%;
+  border-radius: 50%;
+}
+
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; 
+}
+
+.footer-links{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  width: 100%;
+  justify-content: center;
+}
+
+.link {
+  background-color: grey;
+  color: white;
+  padding: 1em 1.5em;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-right: 0.5vw;
+}
+
+.link:hover {
+  background-color: #555;
+}
+
+.link:active {
+  background-color: black;
+}
+
+.link:visited {
+  background-color: #ccc;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
