--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,6 +43,7 @@
   height: auto;
   max-height:15%;
   border-radius: 50%;
+  position: relative;
 }
 
 footer{
@@ -84,4 +85,37 @@ footer{
 a{
   text-decoration: none;
   color: white;
+}
+
+.new_pic {
+	box-shadow: 0px 1px 0px 0px #f0f7fa;
+	/* background:; */
+	background-color:grey;
+	border-radius:6px;
+	border:1px solid darkgray;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #5b6178;
+  margin-top: 1vh;
+}
+.new_pic:hover {
+	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
+	background-color:grey;
+}
+.new_pic:active {
+	position:relative;
+	top:1px;
+}
+
+.greeting-bar{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
