--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -119,3 +119,13 @@ a{
   flex-direction: column;
   align-items: center;
 }
+
+.dog_facts{
+  list-style: none;
+ 
+}
+
+.dog_fact_el{
+  list-style: none;
+ 
+}
