--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,10 @@
 }
 
 footer{
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
-  height: 2.5rem; 
+  min-height: 2.5rem; 
 }
 
 .footer-links{
