--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,10 @@
 }
 
 .landing-image{
-  width: auto;
-  max-width: 15%;
-  height: auto;
-  max-height:15%;
+  min-width: 5%; 
+  max-width: 5%;
+  min-height: 5%;
+  max-height:5%;
   border-radius: 50%;
   position: relative;
 }
@@ -116,8 +116,10 @@ a{
 .greeting-bar{
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  border-bottom: 2px solid black;
+  margin-bottom: 5vh;
 }
 
 .dog_facts{
@@ -137,9 +139,20 @@ a{
 .dog-link{
   cursor: hand;
   color: black;
+  list-style: none;
 }
 
 .dog-link:hover{
   color: grey;
   text-decoration: underline;
+}
+
+#dog-image{
+   max-width: 25vw;
+   max-height: 25vh;
+   list-style: none;
+}
+
+.site-title{
+  margin-left: 40vw;
 }
