styling to dog show page, error correction, link to main

--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,7 @@ a{
 
 .dog_fact_el{
   list-style: none;
-  margin-top: 1vh;
+  margin-top: 2vh;
 }
 
 .indiv-dog-breed{
@@ -155,4 +155,5 @@ a{
 
 .site-title{
   margin-left: 40vw;
+  color: black;
 }
